Fix spacing/cutoff of column-three bottom content

--- a/src/css/art-to-heart-styles.css
+++ b/src/css/art-to-heart-styles.css
@@ -283,9 +283,16 @@ a {
 }
 
 .column-one-bottom, .column-two-bottom, .column-three-bottom {
-    margin-top: 4rem;
     text-align: center;
     background-repeat: no-repeat;
+}
+
+.column-one-bottom, .column-two-bottom {
+    margin-top: 4rem;
+}
+
+.column-three-bottom {
+    padding-top: 4rem;
 }
 
 .column-one-bottom {
